Check for ENXIO as well as EXDEV as expected failure from rename. b=70915 r/sr=brendan